--- a/shop.html
+++ b/shop.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>REVN/O SHOP</title>
-    <link href="logo/r.png" rel="shortcut icon" type="image/png">
+    <title>TiaJ SHOP</title>
+    <link href="logo/T.png" rel="shortcut icon" type="image/png">
     <link rel="stylesheet" href="css/shop.css">
     <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-md navbar-dark bg-none text-center ">
     
     
-            <a class="navbar-brand high" href="index.html"><img src="./logo/revo.png" alt="loading..."></a>
+            <a class="navbar-brand high" href="index.html"><img src="./logo/TiaJ.png" alt="loading..."></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -96,7 +96,7 @@
                     <ul>
                         <li> Toronto, Ontario</li>
                         <li> 555-555-5555</li>
-                        <li> info@revo.com</li>
+                        <li> info@TiaJ.com</li>
                     </ul>
                 </div>
                 <div class="col-sm-4">
